<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="androidmapsdefinitivo.android.bajaintec.com.androidmapsdefinitivo.RegistroActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:src="@drawable/iconomenu1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/registro_text"
        android:textColor="#000000"
        android:textSize="65px" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/iconopersona" />

        <EditText
            android:id="@+id/usuario_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario_edit_text" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/iconocontrasena" />

        <EditText
            android:id="@+id/contrasena_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/contrasena_usuario"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/iconocontrasena" />

        <EditText
            android:id="@+id/contrasena_conf_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/confirmar_contrasena_usuario"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/iconocorreo" />

        <EditText
            android:id="@+id/correo_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_gravity="top|left"
            android:text="@string/fecha_nacimiento_text"
            android:textColor="#000000"
            android:textSize="35px" />
        <Spinner
            android:id="@+id/spinner_dia"
            android:layout_width="123dp"
            android:layout_height="82dp"
            android:layout_gravity="center_vertical|left"/>

        <Spinner
            android:id="@+id/spinner_mes"
            android:layout_width="123dp"
            android:layout_height="82dp"
            android:layout_gravity="center_vertical|center"/>

        <Spinner
            android:id="@+id/spinner_anio"
            android:layout_width="123dp"
            android:layout_height="82dp"
            android:layout_gravity="center_vertical|right"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/continuar_btn"
            android:id="@+id/continuar"
            android:layout_gravity="bottom|right"
            android:textColor="#4d4d4d"
            android:background="#ffffff" />
    </FrameLayout>

</LinearLayout>

